src/parsers/chemicalReaction/MR_ChemicalReaction_Parser.java
/* Generated By:JavaCC: Do not edit this line. MR_ChemicalReaction_Parser.java */
package parsers.chemicalReaction;

import parsers.chemicalReaction.syntaxtree.*;
import parsers.chemicalReaction.visitor.*;
import java.io.*;
import parsers.mathExpression.MR_Expression_ParserConstants;
import parsers.chemicalReaction.syntaxtree.*;


public class MR_ChemicalReaction_Parser implements MR_ChemicalReaction_ParserConstants {

  public static void main(String args[]) {
    System.out.println("Nothing MR_ChemicalReaction_Parser...");
    try {
      String expression = new String("A + B -> C; MOD  ldsdfa;sf");
      InputStream is = new ByteArrayInputStream(expression.getBytes("UTF-8"));
      MR_ChemicalReaction_Parser react = new MR_ChemicalReaction_Parser(is);
      CompleteReaction start = react.CompleteReaction();
      DepthFirstVoidVisitor v = new MyVisitor();
      start.accept(v);
      System.out.println("...................................");
      expression = new String("2 * a ->");
      is = new ByteArrayInputStream(expression.getBytes("UTF-8"));
      react = new MR_ChemicalReaction_Parser(is);
      start = react.CompleteReaction();
      v = new MyVisitor();
      start.accept(v);
      System.out.println("...................................");
      expression = new String("Cdh1(p{1:10}) -> Cdh1(SDFGSDFGSDF(p))");
      is = new ByteArrayInputStream(expression.getBytes("UTF-8"));
      react = new MR_ChemicalReaction_Parser(is);
      start = react.CompleteReaction();
      v = new MyVisitor();
      start.accept(v);
      System.out.println("...................................");
      expression = new String("\u005c"Cdh1\u005c"(p{1:10}) -> \u005c"Cdh1 boh\u005c"(SDFGSDFGSDF(p))");
      is = new ByteArrayInputStream(expression.getBytes("UTF-8"));
      react = new MR_ChemicalReaction_Parser(is);
      start = react.CompleteReaction();
      v = new MyVisitor();
      start.accept(v);
      System.out.println("...................................");
      expression = new String("cdhNOTbool(p{\u005c"TRUE\u005c",\u005c"FALSE\u005c",somethingElse})  -> cdhNOTbool(succ(p))");
      is = new ByteArrayInputStream(expression.getBytes("UTF-8"));
      react = new MR_ChemicalReaction_Parser(is);
      start = react.CompleteReaction();
      v = new MyVisitor();
      start.accept(v);
      System.out.println("...................................");
      expression = new String("cdhNOTbool(p{\u005c"TRUE\u005c", \u005c"FALSE\u005c",somethingElse})  -> cdhNOTbool(succ(p))");
      is = new ByteArrayInputStream(expression.getBytes("UTF-8"));
      react = new MR_ChemicalReaction_Parser(is);
      start = react.CompleteReaction();
      v = new MyVisitor();
      start.accept(v);
      System.out.println("...................................");
      expression = new String("\u005c"Complex_br_(Axin/PP2A/_br_Adenomatous Polyposis Coli)\u005c" + \u005c"_Beta_-Catenin\u005c"(cmp{\u005c"Plasma Membrane\u005c"}) -> \u005c"Complex_br_(Adenomatous Polyposis Coli/Axin/_br__Beta_-Catenin/PP2A)\u005c"");
      is = new ByteArrayInputStream(expression.getBytes("UTF-8"));
      react = new MR_ChemicalReaction_Parser(is);
      start = react.CompleteReaction();
      v = new MyVisitor();
      start.accept(v);
      System.out.println("...................................");
      expression = new String("Wnt(cmp{\u005c"Cell Membrane\u005c"}) -> Wnt(cmp{default})");
      is = new ByteArrayInputStream(expression.getBytes("UTF-8"));
      react = new MR_ChemicalReaction_Parser(is);
      start = react.CompleteReaction();
      v = new MyVisitor();
      start.accept(v);
      System.out.println("...................................");
    }
    catch (Exception e) {
      System.out.println("Oops.");
      System.out.println(e.getMessage());
    }
  }

/*****************************************
 * THE MULTIREMI CHEMICAL REACTION GRAMMAR STARTS HERE *
 *****************************************/
  final public CompleteReaction CompleteReaction() throws ParseException {
  // --- JTB generated node declarations ---
  Reaction n0 = null;
  NodeToken n1 = null;
  Token n2 = null;
    n0 = Reaction();
    n2 = jj_consume_token(0);
    n2.beginColumn++;
    n2.endColumn++;
    { n1 = JTBToolkit.makeNodeToken(n2); }
    {if (true) return new CompleteReaction(n0, n1);}
    throw new Error("Missing return statement in function");
  }

  final public CompleteSpeciesWithCoefficient CompleteSpeciesWithCoefficient() throws ParseException {
  // --- JTB generated node declarations ---
  SpeciesWithCoeff n0 = null;
  NodeToken n1 = null;
  Token n2 = null;
    n0 = SpeciesWithCoeff();
    n2 = jj_consume_token(0);
    n2.beginColumn++;
    n2.endColumn++;
    { n1 = JTBToolkit.makeNodeToken(n2); }
    {if (true) return new CompleteSpeciesWithCoefficient(n0, n1);}
    throw new Error("Missing return statement in function");
  }

  final public Reaction Reaction() throws ParseException {
  // --- JTB generated node declarations ---
  NodeChoice n0 = null;
  NodeSequence n1 = null;
  NodeOptional n2 = new NodeOptional();
  AdditiveExpression n3 = null;
  NodeListOptional n4 = new NodeListOptional();
  Blank n5 = null;
  NodeToken n6 = null;
  Token n7 = null;
  NodeListOptional n8 = new NodeListOptional();
  NodeSequence n9 = null;
  NodeSequence n10 = null;
  NodeToken n11 = null;
  Token n12 = null;
  NodeListOptional n13 = null;
  Blank n14 = null;
  NodeOptional n15 = null;
  AdditiveExpression n16 = null;
  NodeOptional n17 = new NodeOptional();
  NodeSequence n18 = null;
  NodeListOptional n19 = null;
  Blank n20 = null;
  NodeToken n21 = null;
  Token n22 = null;
  NodeListOptional n23 = null;
  Blank n24 = null;
  ListModifiers n25 = null;
  NodeSequence n26 = null;
  NodeToken n27 = null;
  Token n28 = null;
  NodeListOptional n29 = new NodeListOptional();
  Blank n30 = null;
  NodeOptional n31 = new NodeOptional();
  AdditiveExpression n32 = null;
  NodeOptional n33 = new NodeOptional();
  NodeSequence n34 = null;
  NodeListOptional n35 = null;
  Blank n36 = null;
  NodeToken n37 = null;
  Token n38 = null;
  NodeListOptional n39 = null;
  Blank n40 = null;
  ListModifiers n41 = null;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case INTEGER_LITERAL:
    case FLOATING_POINT_LITERAL:
    case IDENTIFIER:
    case ARROW:
    case 23:
      n1 = new NodeSequence(5);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case INTEGER_LITERAL:
      case FLOATING_POINT_LITERAL:
      case IDENTIFIER:
        n3 = AdditiveExpression();
        n2.addNode(n3);
        break;
      default:
        jj_la1[0] = jj_gen;
        ;
      }
      n1.addNode(n2);
      label_1:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 23:
          ;
          break;
        default:
          jj_la1[1] = jj_gen;
          break label_1;
        }
        n5 = Blank();
        n4.addNode(n5);
      }
      n4.nodes.trimToSize();
      n1.addNode(n4);
      n7 = jj_consume_token(ARROW);
      n6 = JTBToolkit.makeNodeToken(n7);
      n1.addNode(n6);
      label_2:
      while (true) {
        if (jj_2_1(2)) {
          ;
        } else {
          break label_2;
        }
        n13 = new NodeListOptional();
        n15 = new NodeOptional();
        n9 = new NodeSequence(3);
          n10 = new NodeSequence(1);
        n12 = jj_consume_token(23);
          n11 = JTBToolkit.makeNodeToken(n12);
          n10.addNode(n11);
        n9.addNode(n10);
        label_3:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case 23:
            ;
            break;
          default:
            jj_la1[2] = jj_gen;
            break label_3;
          }
          n14 = Blank();
          n13.addNode(n14);
        }
        n13.nodes.trimToSize();
        n9.addNode(n13);
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case INTEGER_LITERAL:
        case FLOATING_POINT_LITERAL:
        case IDENTIFIER:
          n16 = AdditiveExpression();
          n15.addNode(n16);
          break;
        default:
          jj_la1[3] = jj_gen;
          ;
        }
        n9.addNode(n15);
        n8.addNode(n9);
      }
      n8.nodes.trimToSize();
      n1.addNode(n8);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 23:
      case 24:
        n19 = new NodeListOptional();
        n23 = new NodeListOptional();
        n18 = new NodeSequence(4);
        label_4:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case 23:
            ;
            break;
          default:
            jj_la1[4] = jj_gen;
            break label_4;
          }
          n20 = Blank();
          n19.addNode(n20);
        }
        n19.nodes.trimToSize();
        n18.addNode(n19);
        n22 = jj_consume_token(24);
        n21 = JTBToolkit.makeNodeToken(n22);
        n18.addNode(n21);
        label_5:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case 23:
            ;
            break;
          default:
            jj_la1[5] = jj_gen;
            break label_5;
          }
          n24 = Blank();
          n23.addNode(n24);
        }
        n23.nodes.trimToSize();
        n18.addNode(n23);
        n25 = ListModifiers();
        n18.addNode(n25);
        n17.addNode(n18);
        break;
      default:
        jj_la1[6] = jj_gen;
        ;
      }
      n1.addNode(n17);
      n0 = new NodeChoice(n1, 0, 2);
      break;
    case ARROW2:
      n26 = new NodeSequence(4);
      n28 = jj_consume_token(ARROW2);
      n27 = JTBToolkit.makeNodeToken(n28);
      n26.addNode(n27);
      label_6:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 23:
          ;
          break;
        default:
          jj_la1[7] = jj_gen;
          break label_6;
        }
        n30 = Blank();
        n29.addNode(n30);
      }
      n29.nodes.trimToSize();
      n26.addNode(n29);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case INTEGER_LITERAL:
      case FLOATING_POINT_LITERAL:
      case IDENTIFIER:
        n32 = AdditiveExpression();
        n31.addNode(n32);
        break;
      default:
        jj_la1[8] = jj_gen;
        ;
      }
      n26.addNode(n31);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 23:
      case 24:
        n35 = new NodeListOptional();
        n39 = new NodeListOptional();
        n34 = new NodeSequence(4);
        label_7:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case 23:
            ;
            break;
          default:
            jj_la1[9] = jj_gen;
            break label_7;
          }
          n36 = Blank();
          n35.addNode(n36);
        }
        n35.nodes.trimToSize();
        n34.addNode(n35);
        n38 = jj_consume_token(24);
        n37 = JTBToolkit.makeNodeToken(n38);
        n34.addNode(n37);
        label_8:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case 23:
            ;
            break;
          default:
            jj_la1[10] = jj_gen;
            break label_8;
          }
          n40 = Blank();
          n39.addNode(n40);
        }
        n39.nodes.trimToSize();
        n34.addNode(n39);
        n41 = ListModifiers();
        n34.addNode(n41);
        n33.addNode(n34);
        break;
      default:
        jj_la1[11] = jj_gen;
        ;
      }
      n26.addNode(n33);
      n0 = new NodeChoice(n26, 1, 2);
      break;
    default:
      jj_la1[12] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    {if (true) return new Reaction(n0);}
    throw new Error("Missing return statement in function");
  }

  final public AdditiveExpression AdditiveExpression() throws ParseException {
  // --- JTB generated node declarations ---
  SpeciesWithCoeff n0 = null;
  NodeListOptional n1 = new NodeListOptional();
  NodeSequence n2 = null;
  NodeListOptional n3 = null;
  Blank n4 = null;
  NodeToken n5 = null;
  Token n6 = null;
  NodeListOptional n7 = null;
  Blank n8 = null;
  SpeciesWithCoeff n9 = null;
    n0 = SpeciesWithCoeff();
    label_9:
    while (true) {
      if (jj_2_2(2)) {
        ;
      } else {
        break label_9;
      }
      n3 = new NodeListOptional();
      n7 = new NodeListOptional();
      n2 = new NodeSequence(4);
      label_10:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 23:
          ;
          break;
        default:
          jj_la1[13] = jj_gen;
          break label_10;
        }
        n4 = Blank();
        n3.addNode(n4);
      }
      n3.nodes.trimToSize();
      n2.addNode(n3);
      n6 = jj_consume_token(25);
      n5 = JTBToolkit.makeNodeToken(n6);
      n2.addNode(n5);
      label_11:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 23:
          ;
          break;
        default:
          jj_la1[14] = jj_gen;
          break label_11;
        }
        n8 = Blank();
        n7.addNode(n8);
      }
      n7.nodes.trimToSize();
      n2.addNode(n7);
      n9 = SpeciesWithCoeff();
      n2.addNode(n9);
      n1.addNode(n2);
    }
    n1.nodes.trimToSize();
    {if (true) return new AdditiveExpression(n0, n1);}
    throw new Error("Missing return statement in function");
  }

  final public SpeciesWithCoeff SpeciesWithCoeff() throws ParseException {
  // --- JTB generated node declarations ---
  NodeOptional n0 = new NodeOptional();
  NodeSequence n1 = null;
  Stoichiometry n2 = null;
  NodeListOptional n3 = null;
  Blank n4 = null;
  NodeToken n5 = null;
  Token n6 = null;
  NodeListOptional n7 = null;
  Blank n8 = null;
  Species n9 = null;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case INTEGER_LITERAL:
    case FLOATING_POINT_LITERAL:
      n3 = new NodeListOptional();
      n7 = new NodeListOptional();
      n1 = new NodeSequence(4);
      n2 = Stoichiometry();
      n1.addNode(n2);
      label_12:
      while (true) {
        if (jj_2_3(2)) {
          ;
        } else {
          break label_12;
        }
        n4 = Blank();
        n3.addNode(n4);
      }
      n3.nodes.trimToSize();
      n1.addNode(n3);
      n6 = jj_consume_token(26);
      n5 = JTBToolkit.makeNodeToken(n6);
      n1.addNode(n5);
      label_13:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 23:
          ;
          break;
        default:
          jj_la1[15] = jj_gen;
          break label_13;
        }
        n8 = Blank();
        n7.addNode(n8);
      }
      n7.nodes.trimToSize();
      n1.addNode(n7);
      n0.addNode(n1);
      break;
    default:
      jj_la1[16] = jj_gen;
      ;
    }
    n9 = Species();
    {if (true) return new SpeciesWithCoeff(n0, n9);}
    throw new Error("Missing return statement in function");
  }

  final public Blank Blank() throws ParseException {
  // --- JTB generated node declarations ---
  NodeToken n0 = null;
  Token n1 = null;
    n1 = jj_consume_token(23);
    n0 = JTBToolkit.makeNodeToken(n1);
    {if (true) return new Blank(n0);}
    throw new Error("Missing return statement in function");
  }

  final public ListModifiers ListModifiers() throws ParseException {
  // --- JTB generated node declarations ---
  Species n0 = null;
  NodeListOptional n1 = new NodeListOptional();
  NodeSequence n2 = null;
  NodeList n3 = null;
  Blank n4 = null;
  Species n5 = null;
    n0 = Species();
    label_14:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 23:
        ;
        break;
      default:
        jj_la1[17] = jj_gen;
        break label_14;
      }
      n3 = new NodeList();
      n2 = new NodeSequence(2);
      label_15:
      while (true) {
        n4 = Blank();
        n3.addNode(n4);
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 23:
          ;
          break;
        default:
          jj_la1[18] = jj_gen;
          break label_15;
        }
      }
      n3.nodes.trimToSize();
      n2.addNode(n3);
      n5 = Species();
      n2.addNode(n5);
      n1.addNode(n2);
    }
    n1.nodes.trimToSize();
    {if (true) return new ListModifiers(n0, n1);}
    throw new Error("Missing return statement in function");
  }

  final public Species Species() throws ParseException, ParseException {
  // --- JTB generated node declarations ---
  NodeToken n0 = null;
  Token n1 = null;
  NodeListOptional n2 = new NodeListOptional();
  NodeToken n3 = null;
  Token n4 = null;
    n1 = jj_consume_token(IDENTIFIER);
    n0 = JTBToolkit.makeNodeToken(n1);
    label_16:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IDENTIFIER:
        ;
        break;
      default:
        jj_la1[19] = jj_gen;
        break label_16;
      }
      n4 = jj_consume_token(IDENTIFIER);
      n3 = JTBToolkit.makeNodeToken(n4);
      n2.addNode(n3);
    }
    n2.nodes.trimToSize();
    {if (true) return new Species(n0, n2);}
    throw new Error("Missing return statement in function");
  }
